Sun Oct 30 21:22:35 CET 2005 (tk)
---------------------------------
  * clamd/others.c: fix compilation error on Cobalt Qube 1

Sun Oct 30 18:46:36 CET 2005 (tk)
---------------------------------
  * libclamav/scanners.c: fix logic bug in cli_scandesc(). Patch by Andrey J.
			  Melnikoff (TEMHOTA) <temnota*kmv.ru>

Mon Oct 24 12:29:31 CEST 2005 (acab)
------------------------------------
  * libclamav/pe.c: fixed possible infinite loop, reported by Christoph 

Thu Oct 20 00:54:13 CEST 2005 (tk)
----------------------------------
  * libclamav/filetypes.c: cli_addtypesigs: initialise AC matcher in
			   engine->root[0] if needed

Tue Oct 18 11:29:04 BST 2005 (trog)
-----------------------------------
  * libclamav/others.c,h: Add generic bitset implementation

  * libclamav/ole2_extract.c: Make sure the property tree doesn't loop

Fri Sep 30 17:00:49 BST 2005 (njh)
----------------------------------
  * clamav-milter:	Added --freshclam-monitor

Mon Sep 26 19:40:14 CEST 2005 (tk)
----------------------------------
  * libclamav/matcher.c: cl_build: cli_addtypesigs was corrupting AC trie in
			 engine->root[0]

Fri Sep 23 04:05:07 CEST 2005 (tk)
----------------------------------
  * libclamav/clamav.h: split cl_node into cli_matcher and cl_engine
  * libclamav/readdb.c: read signatures into separate trees depending on
			their type
  * libclamav/matcher.c: scan data with suitable trees

Mon Sep 19 01:15:02 CEST 2005 (tk)
----------------------------------
  * libclamav/elf.c: add cli_elfheader()
  * libclamav/execs.h: new file
  * libclamav/matcher.c: support ELF files in cli_caloff()

Fri Sep 16 16:49:14 CEST 2005 (tk)
----------------------------------
  * libclamav/upx.c: fix possible buffer overflow (acab)

Fri Sep 16 16:39:37 CEST 2005 (tk)
----------------------------------
  * libclamav/fsg.c: fix possible infinite loop (acab)

Thu Sep 15 23:32:07 CEST 2005 (tk)
----------------------------------
  * libclamav/others: increase f-level
